--- a/default.yaml
+++ b/default.yaml
@@ -7,12 +7,11 @@ config_version: "2024-02-05"
 # 方案列表
 schema_list:
   # 可以直接删除或注释不需要的方案，对应的 *.schema.yaml 方案文件也可以直接删除
-  # 除了 t9，它依赖于 rime_ice，用九宫格别删 rime_ice.schema.yaml
   - schema: rime_sleet # 凍雨拼音（全拼）
 
 # 菜单
 menu:
-  page_size: 8 # 候选词个数
+  page_size: 7 # 候选词个数
   # alternative_select_labels: [ ①, ②, ③, ④, ⑤, ⑥, ⑦, ⑧, ⑨, ⑩ ]  # 修改候选项标签
   # alternative_select_keys: ASDFGHJKL  # 如编码字符占用数字键，则需另设选字键（注意在雾凇中，大写字母也作为编码了）
 
@@ -28,6 +27,7 @@ switcher:
     - ascii_punct
     - traditionalization
     - emoji
+    # - kaomoji
     - full_shape
     - search_single_char
   fold_options: true # 呼出时是否折叠，多方案时建议折叠 true ，一个方案建议展开 false
