--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 wanxiang-lts-zh-hans.gram filter=lfs diff=lfs merge=lfs -text
 cn_dicts/zhwiki.dict.yaml filter=lfs diff=lfs merge=lfs -text
+zh-hans-t-huayu-v7-bgw.gram filter=lfs diff=lfs merge=lfs -text
